src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/KHRBlendEquationAdvanced_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/KHRBlendEquationAdvanced_StringErrorContext.class */
public final class KHRBlendEquationAdvanced_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glBlendBarrierKHR()V", "net/labymod/core/laby3d/opengl/error/generated/KHRBlendEquationAdvancedErrorContext");
        return methods;
    }
}
